[project]
name = "rag-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "huggingface-hub[hf-xet]>=0.31.4",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "ollama>=0.4.8",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]

[tool.ruff]
# Enable fix behavior by-default when running ruff.
# https://docs.astral.sh/ruff/settings/#fix
fix = true

# The line length to use when enforcing long-lines violations (like E501) and at which
# isort and the formatter prefers to wrap lines.
# https://docs.astral.sh/ruff/settings/#line-length
line-length = 128

# The style in which violation messages should be formatted.
# https://docs.astral.sh/ruff/settings/#output-format
output-format = "concise"

[tool.ruff.format]
# Whether to format code snippets in docstrings.
# https://docs.astral.sh/ruff/settings/#format_docstring-code-format
docstring-code-format = true

# Ruff uses existing trailing commas as an indication that short lines should be left
# separate.
# https://docs.astral.sh/ruff/settings/#format_skip-magic-trailing-comma
skip-magic-trailing-comma = true

[tool.ruff.lint]
